# csopesy-mco

./: .gitignore  CMakeLists.txt  CSOPESY MCO.cpp  CSOPESY MCO.h  CSOPESY MCO.sln  CSOPESY MCO.vcxproj  README.md  vcpkg.json
commands/: ACommand.h  ScreenCommand.cpp  ScreenCommand.h
console/: AConsole.h  BaseScreen.cpp  BaseScreen.h  ConsoleManager.cpp  ConsoleManager.h  MainConsole.cpp  MainConsole.h
process/: Process.cpp  Process.h
src/: main.cpp  main.h
src/commands/: ExitCommand.cpp  ExitCommand.h  InitializeCommand.cpp  InitializeCommand.h  ProcessSMICommand.cpp  ProcessSMICommand.h  ReportUtilCommand.cpp  ReportUtilCommand.h  SchedulerStopCommand.cpp  SchedulerStopCommand.h  SchedulerTestCommand.cpp  SchedulerTestCommand.h  ScreenCommand.cpp  ScreenCommand.h  VMStatCommand.cpp  VMStatCommand.h
src/console/: AConsole.h  BaseScreen.cpp  BaseScreen.h  ConsoleManager.cpp  ConsoleManager.h  MainConsole.cpp  MainConsole.h
src/cpu/: CPUManager.cpp  CPUManager.h  CPUWorker.cpp  CPUWorker.h
src/disk/: BackingStore.cpp  BackingStore.h
src/instructions/: AInstruction.h  NoOpInstruction.cpp  NoOpInstruction.h  PrintInstruction.cpp  PrintInstruction.h
src/memory/: FirstFitFlatAllocator.cpp  FirstFitFlatAllocator.h  IMemoryAllocator.h  MemoryManager.cpp  MemoryManager.h  PagingAllocator.cpp  PagingAllocator.h
src/process/: AScheduler.cpp  AScheduler.h  FCFSScheduler.cpp  FCFSScheduler.h  Process.cpp  Process.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h
src/threading/: CustomThread.cpp  CustomThread.h  SchedulerThread.cpp  SchedulerThread.h  Thread.cpp  Thread.h
src/util/: randint.cpp  randint.h  string-tokenizer.cpp  string-tokenizer.h
